--- a/django_app/main/locale/de/LC_MESSAGES/django.po
+++ b/django_app/main/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Dyapos 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-03-21 22:59-0300\n"
+"POT-Creation-Date: 2014-03-22 20:23-0300\n"
 "PO-Revision-Date: 2014-02-05 21:55+0100\n"
 "Last-Translator: Andre Jaenisch <ryunoki@openmailbox.org>\n"
 "Language-Team: Deutsch <andre.jaenisch@openmailbox.org>\n"
@@ -132,9 +132,8 @@ msgid "lbl_size"
 msgstr "Größe"
 
 #: templates/edit.html:126
-#, fuzzy
 msgid "lbl_rotation"
-msgstr "Beschreibung"
+msgstr "Rotation"
 
 #: templates/edit.html:127
 msgid "tt_rotate_z"
