--- a/django_app/main/locale/en/LC_MESSAGES/django.po
+++ b/django_app/main/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-03-21 22:59-0300\n"
+"POT-Creation-Date: 2014-03-22 20:23-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -130,9 +130,8 @@ msgid "lbl_size"
 msgstr "Size"
 
 #: templates/edit.html:126
-#, fuzzy
 msgid "lbl_rotation"
-msgstr "Description"
+msgstr "Rotation"
 
 #: templates/edit.html:127
 msgid "tt_rotate_z"
